--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "express-session": "^1.15.6",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
-    "pug": "2.0.0-beta11",
-//    "axios": ""
+    "pug": "2.0.0-beta11"
   },
   "devDependencies": {
     "mysql": "^2.16.0"
